test/fail/globalvar-no-init.app
//Global variable 'one' must be initialized

application test

entity Test {
}

var one : Test;

define page root(){}
